ticket:4 show value from django. settings

--- a/django_hello_world/hello/templates/hello/home.html
+++ b/django_hello_world/hello/templates/hello/home.html
@@ -19,6 +19,7 @@
 <tr><td>{{ user.get_profile.date_birth }} </td></tr>
 <tr><td>Bio:<br/>{{ user.get_profile.bio }} </td></tr>
 </table>
+{{ settings.DEBUG }}
 {%endfor%}
 
 {% endblock content %}
