--- a/django_hello_world/hello/templates/hello/view_edit.html
+++ b/django_hello_world/hello/templates/hello/view_edit.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h3>Hello! This is a Django Hello World Project.</h3>
-{{ form_user.as_p }}
-{{ form_profile.as_p }}
-
+<h3>Hello!!! This is a Django Hello World Project.</h3>
+<table border=1><tr>
+    <td><table>{{ form_user.as_table }}</table></td>
+    <td><table>{{ form_profile.as_table }}</table></td>
+</tr></table>
 
 {% endblock content %}
