--- a/django_hello_world/hello/templates/hello/view_edit.html
+++ b/django_hello_world/hello/templates/hello/view_edit.html
@@ -2,9 +2,13 @@
 
 {% block content %}
 <h3>Hello!!! This is a Django Hello World Project.</h3>
+<form action="" method="post">{% csrf_token %}
+
 <table border=1><tr>
     <td><table>{{ form_user.as_table }}</table></td>
     <td><table>{{ form_profile.as_table }}</table></td>
 </tr></table>
+<input type="submit" value="Submit" />
+</form>
 
 {% endblock content %}
