ticket:5 add bio

--- a/django_hello_world/hello/templates/hello/view_edit.html
+++ b/django_hello_world/hello/templates/hello/view_edit.html
@@ -34,6 +34,7 @@ hello, {{form_user.first_name.value}}. <a href="/admin/logout">Logout</a>
         <tr><td> Jabber: {{ form_profile.jabber }} </td></tr>
         <tr><td> Skype: {{ form_profile.skype }} </td></tr>
         <tr><td> Other Contacts:<br/> {{ form_profile.other_contacts }} </td></tr>
+        <tr><td> Bio:<br/> {{ form_profile.bio }} </td></tr>
     </table>
     </td>
 </tr></table>
