--- a/django_hello_world/hello/templates/hello/view_edit.html
+++ b/django_hello_world/hello/templates/hello/view_edit.html
@@ -12,9 +12,9 @@ hello, {{user.first_name.value}}. <a href="{% url hello.views.my_logout %}?next=
 </p>
 <form action="" method="post"  enctype="multipart/form-data">{% csrf_token %}
 
-<table border=1><tr>
+<table ><tr>
     <!-- left fields -->
-    <td>
+    <td width="50%">
     <table >
         <tr><td> {{ user.first_name }} </td></tr>
         <tr><td> {{ user.last_name }} </td></tr>
@@ -34,11 +34,11 @@ hello, {{user.first_name.value}}. <a href="{% url hello.views.my_logout %}?next=
     <td valign=top>
     <table >
         <tr><td> Contacts </td></tr>
-        <tr><td> Email: {{ user.email }} </td></tr>
-        <tr><td> Jabber: {{ profile.jabber }} </td></tr>
-        <tr><td> Skype: {{ profile.skype }} </td></tr>
-        <tr><td> Other Contacts:<br/> {{ profile.other_contacts }} </td></tr>
-        <tr><td> Bio:<br/> {{ profile.bio }} </td></tr>
+        <tr><td> Email:</td><td> {{ user.email }} </td></tr>
+        <tr><td> Jabber: </td><td>{{ profile.jabber }} </td></tr>
+        <tr><td> Skype: </td><td>{{ profile.skype }} </td></tr>
+        <tr><td colspan=2 > Other Contacts:<br/> {{ profile.other_contacts }} </td></tr>
+        <tr><td colspan=2 > Bio:<br/> {{ profile.bio }} </td></tr>
     </table>
     </td>
 </tr></table>
