ticekt:6 show profile.date_birth1 from tamplate

--- a/django_hello_world/hello/templates/hello/view_edit.html
+++ b/django_hello_world/hello/templates/hello/view_edit.html
@@ -19,6 +19,11 @@ hello, {{user.first_name.value}}. <a href="{% url hello.views.my_logout %}?next=
         <tr><td> {{ user.first_name }} </td></tr>
         <tr><td> {{ user.last_name }} </td></tr>
         <tr><td> {{ profile.date_birth }} </td></tr>
+        <tr><td> 
+                {% autoescape off %}
+                {{ profile.date_birth1 }} 
+                {% endautoescape %}
+        </td></tr>
         <tr><td> Photo:<br/>
             {% if current_image %}
                 <img src="{{ MEDIA_URL }}{{ current_image }}"/> <br/>
