ticket:6 jquery widjet added

--- a/django_hello_world/hello/templates/hello/view_edit.html
+++ b/django_hello_world/hello/templates/hello/view_edit.html
@@ -18,10 +18,9 @@ hello, {{user.first_name.value}}. <a href="{% url hello.views.my_logout %}?next=
     <table >
         <tr><td> {{ user.first_name }} </td></tr>
         <tr><td> {{ user.last_name }} </td></tr>
-        <tr><td> {{ profile.date_birth }} </td></tr>
         <tr><td> 
                 {% autoescape off %}
-                {{ profile.date_birth1 }} 
+                {{ profile.date_birth }} 
                 {% endautoescape %}
         </td></tr>
         <tr><td> Photo:<br/>
