--- a/django_hello_world/hello/templates/hello/view_edit.html
+++ b/django_hello_world/hello/templates/hello/view_edit.html
@@ -7,10 +7,11 @@
 hello, {{user.first_name.value}}. <a href="{% url hello.views.my_logout %}?next={% url hello.views.view_edit %}">Logout</a>
 {% else %}
 <a href="{% url django.contrib.auth.views.login %}?next={% url hello.views.view_edit %}">Login</a>
-
  {%endif%}
 </p>
+{% if request.user.is_authenticated %}
 <form action="" method="post"  enctype="multipart/form-data">{% csrf_token %}
+ {%endif%}
 
 <table ><tr>
     <!-- left fields -->
@@ -46,8 +47,10 @@ hello, {{user.first_name.value}}. <a href="{% url hello.views.my_logout %}?next=
     </table>
     </td>
 </tr></table>
+{% if request.user.is_authenticated %}
 <input type="submit" value="Save" />
 </form>
+{% endif %}
 
 {% endblock content %}
 
