--- a/django_hello_world/hello/templates/hello/custom_tag.html
+++ b/django_hello_world/hello/templates/hello/custom_tag.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
-
 {% block content %}
+
+{% load edit_link %}
+{% edit_link "TeStTag" %}
 <h3>Hello!!! This is a Django Hello World Project.</h3>
 <p>
 {% if request.user.is_authenticated %}
