--- a/django_hello_world/hello/templates/hello/custom_tag.html
+++ b/django_hello_world/hello/templates/hello/custom_tag.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 {% load edit_link %}
-{% edit_link "TeStTag" %}
+{% edit_link request.user %}
 <h3>Hello!!! This is a Django Hello World Project.</h3>
 <p>
 {% if request.user.is_authenticated %}
